Document JPMS and agent flags for JDK 17+ hot reload
Added detailed instructions and checklists in CLAUDE-SECTION.md, CLAUDE.md, and HOT_RELOAD_GUIDE.md for configuring Maven and JVM flags required for Descartes hot reload on JDK 17+. This includes guidance on using -XX:+EnableDynamicAgentLoading and --add-opens flags to ensure Attach/JDI access is not blocked by JPMS, and notes on Maven Surefire plugin configuration.